--- a/k.ipynb
+++ b/k.ipynb
@@ -1046,11 +1046,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Voima on 32 µN\n"
+            "Voima on 32 µN.\n"
           ]
         }
       ],
-      "execution_count": 307,
+      "execution_count": 319,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1063,9 +1063,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-08T17:28:33.976Z",
-          "iopub.execute_input": "2021-11-08T17:28:34.000Z",
-          "iopub.status.idle": "2021-11-08T17:28:34.136Z"
+          "iopub.status.busy": "2021-11-08T18:05:21.619Z",
+          "iopub.execute_input": "2021-11-08T18:05:21.645Z",
+          "iopub.status.idle": "2021-11-08T18:05:21.706Z"
         }
       }
     },
@@ -1301,7 +1301,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-29\n",
+        "k-29 $e_k=-N\\frac{\\Delta\\Phi}{\\Delta t}$\n",
         "\n",
         "Kirjan vastaus: c) 1.5 V"
       ],
@@ -1310,6 +1310,40 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ek=660*35e-6/15e-3\n",
+        "@printf(\"Keskimääräinen jännite on %.1f V.\\n\",ek)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keskimääräinen jännite on 1.5 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 321,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T16:44:16.745Z",
+          "iopub.execute_input": "2021-11-09T16:44:16.780Z",
+          "iopub.status.idle": "2021-11-09T16:44:16.837Z"
         }
       }
     },
@@ -1329,9 +1363,44 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "@printf(\"Tehollinen jännite on %.0f V.\\n\",400/sqrt(2))\n",
+        "@printf(\"Taajuus on %.0f Hz.\\n\",1/10e-3)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tehollinen jännite on 283 V.\n",
+            "Taajuus on 100 Hz.\n"
+          ]
+        }
+      ],
+      "execution_count": 322,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T16:47:21.066Z",
+          "iopub.execute_input": "2021-11-09T16:47:21.093Z",
+          "iopub.status.idle": "2021-11-09T16:47:21.207Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "k-36\n",
+        "k-36 Jännitteen maksimi, kun magneettikenttä on käämin lankojen suuntainen, jolloin magneettikentän muutos on nopein. Jännite on 0, kun magneettikenttä on kohtisuorassa käämejä vastaan ja jännitteen merkki vaihtuu.\n",
         "\n",
         "Kirjan vastaus: a) 2 b) 1"
       ],
@@ -1355,6 +1424,48 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "omega=314\n",
+        "B=0.3\n",
+        "A=85e-4\n",
+        "N=25\n",
+        "e0=N*A*B*omega\n",
+        "@printf(\"Jännitteen huippuarvo on %.0f V ja tehollinen jännite %.0f V.\\n\",e0,e0/sqrt(2))\n",
+        "t=2.5\n",
+        "e25=sin(omega*t)*e0\n",
+        "@printf(\"Jännite hetkellä 2.5 s on %.1f V.\\n\",e25)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jännitteen huippuarvo on 20 V ja tehollinen jännite 14 V.\n",
+            "Jännite hetkellä 2.5 s on -7.8 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 325,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T18:53:17.685Z",
+          "iopub.execute_input": "2021-11-09T18:53:17.717Z",
+          "iopub.status.idle": "2021-11-09T18:53:17.779Z"
         }
       }
     },
@@ -1389,6 +1500,44 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "N2=10\n",
+        "U1=230\n",
+        "U2=9\n",
+        "N1=U1/U2*N2\n",
+        "@printf(\"Ensiöpuolen käämissä on %d kierrosta.\\n\",\n",
+        "  10*Int(round(N1/10)))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ensiöpuolen käämissä on 260 kierrosta.\n"
+          ]
+        }
+      ],
+      "execution_count": 330,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T19:03:45.689Z",
+          "iopub.execute_input": "2021-11-09T19:03:45.718Z",
+          "iopub.status.idle": "2021-11-09T19:03:45.773Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "k-40\n",
@@ -1419,6 +1568,43 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "N2=6\n",
+        "N1=1200\n",
+        "U1=230\n",
+        "U2=N2/N1*U1\n",
+        "@printf(\"Toisiopuolen jännite on %.1f V.\\n\",U2)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Toisiopuolen jännite on 1.2 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 331,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T19:08:30.134Z",
+          "iopub.execute_input": "2021-11-09T19:08:30.160Z",
+          "iopub.status.idle": "2021-11-09T19:08:30.217Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "k-42\n",
@@ -1430,6 +1616,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "U1=230\n",
+        "U2=U1/12\n",
+        "I=2.6\n",
+        "P2=U2*I\n",
+        "P1=57\n",
+        "@printf(\"Muuntajan hyötysuhde on %.2f.\\n\",0.84*P2/P1)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Muuntajan hyötysuhde on 0.73.\n"
+          ]
+        }
+      ],
+      "execution_count": 332,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T19:12:40.761Z",
+          "iopub.execute_input": "2021-11-09T19:12:40.790Z",
+          "iopub.status.idle": "2021-11-09T19:12:40.856Z"
         }
       }
     },
@@ -1449,9 +1673,46 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "f=95.7e6\n",
+        "lambda=c/f\n",
+        "l=lambda/2\n",
+        "@printf(\"Puoliaaltoantennin pituus on %.2f m.\\n\",l)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Puoliaaltoantennin pituus on 1.57 m.\n"
+          ]
+        }
+      ],
+      "execution_count": 334,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T19:17:16.413Z",
+          "iopub.execute_input": "2021-11-09T19:17:16.445Z",
+          "iopub.status.idle": "2021-11-09T19:17:16.503Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "k-44\n",
+        "k-44 $f_0=\\frac{1}{2\\pi\\sqrt{LC}}$<br>\n",
+        "$L=\\frac{1}{4\\pi^2{f_0}^2C}$\n",
         "\n",
         "Kirjan vastaus: 98 µH"
       ],
@@ -1460,6 +1721,42 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "C=32e-15\n",
+        "f0=89.9e6\n",
+        "L=1/(4*pi^2*f0^2*C)\n",
+        "@printf(\"Impedanssi on %.0f µH.\\n\",1e6*L)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Impedanssi on 98 µH.\n"
+          ]
+        }
+      ],
+      "execution_count": 337,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-09T19:25:07.652Z",
+          "iopub.execute_input": "2021-11-09T19:25:07.686Z",
+          "iopub.status.idle": "2021-11-09T19:25:07.750Z"
         }
       }
     },
