--- a/k.ipynb
+++ b/k.ipynb
@@ -1763,7 +1763,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "S2007/4 b) 38.4°"
+        "S2007/4 $\\frac{sin \\alpha_1}{sin \\alpha_2}=\\frac{n_2}{n_1}$\n",
+        "\n",
+        "b) 38.4°"
       ],
       "metadata": {
         "nteract": {
@@ -1774,11 +1776,76 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n1=1\n",
+        "n2=1.55\n",
+        "n3=1.42\n",
+        "# rajakulma kokonaisheijastumiselle ytimen ja vaipan välillä\n",
+        "a3=asin(n3/n2)\n",
+        "# siirrytään ytimen päätyyn joten käännetaan koordinaatisto\n",
+        "a2=pi/2-a3\n",
+        "a1=asin(n2*sin(a2)/n1)\n",
+        "@printf(\"Tulokulma voi olla korkeintaan %.1f°.\\n\",a1*180/pi)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tulokulma voi olla korkeintaan 38.4°.\n"
+          ]
+        }
+      ],
+      "execution_count": 341,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-10T20:18:59.911Z",
+          "iopub.execute_input": "2021-11-10T20:18:59.939Z",
+          "iopub.status.idle": "2021-11-10T20:19:00.115Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "K2014/+13 d) 1) 99 % 2) 52 %"
       ],
       "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P=15e3\n",
+        "U=21e3\n",
+        "I=P/U\n",
+        "R=75*0.065\n",
+        "Pr="
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
         "nteract": {
           "transient": {
             "deleting": false
