--- a/k.ipynb
+++ b/k.ipynb
@@ -1832,14 +1832,31 @@
     {
       "cell_type": "code",
       "source": [
-        "P=15e3\n",
-        "U=21e3\n",
-        "I=P/U\n",
-        "R=75*0.065\n",
-        "Pr="
+        "function hs(U)\n",
+        "  P=15e3\n",
+        "  R=2*75*0.065\n",
+        "  I=P/U\n",
+        "  Pr=R*I^2\n",
+        "  @printf(\"\"\"Jännitteellä %.1e siirron hukkateho on %.0f W\n",
+        "    ja hyötysuhde on %.3f %%.\\n\"\"\",\n",
+        "    U,Pr,100*1/(1+Pr/P))\n",
+        "end \n",
+        "hs(21e3)\n",
+        "hs(400)"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jännitteellä 2.1e+04 siirron hukkateho on 5 W\n",
+            "ja hyötysuhde on 99.967 %.\n",
+            "Jännitteellä 4.0e+02 siirron hukkateho on 13711 W\n",
+            "ja hyötysuhde on 52.245 %.\n"
+          ]
+        }
+      ],
+      "execution_count": 362,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1850,15 +1867,81 @@
           "transient": {
             "deleting": false
           }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-11T16:58:04.531Z",
+          "iopub.execute_input": "2021-11-11T16:58:04.588Z",
+          "iopub.status.idle": "2021-11-11T16:58:04.664Z"
         }
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "K2016/8 a) 0.7 mV"
+        "K2016/8 $e=\\frac{\\Delta \\Phi}{\\Delta t}$\n",
+        "\n",
+        "a) 0.7 mV"
       ],
       "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "I=2\n",
+        "r=0.055\n",
+        "my0=4*pi*1e-7\n",
+        "B=my0*I/(2*pi*r)\n",
+        "dt=1e-6\n",
+        "A=1e-4\n",
+        "dFii=B*A\n",
+        "e=dFii/dt\n",
+        "@printf(\"Indudoituva jännite on %.1f mV.\\n\",1e3*e)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indudoituva jännite on 0.7 mV.\n"
+          ]
+        }
+      ],
+      "execution_count": 369,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-11T17:08:32.188Z",
+          "iopub.execute_input": "2021-11-11T17:08:32.217Z",
+          "iopub.status.idle": "2021-11-11T17:08:32.280Z"
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
         "nteract": {
           "transient": {
             "deleting": false
