--- a/k.ipynb
+++ b/k.ipynb
@@ -1901,18 +1901,18 @@
         "A=1e-4\n",
         "dFii=B*A\n",
         "e=dFii/dt\n",
-        "@printf(\"Indudoituva jännite on %.1f mV.\\n\",1e3*e)"
+        "@printf(\"Indusoituva jännite on %.1f mV.\\n\",1e3*e)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Indudoituva jännite on 0.7 mV.\n"
+            "Indusoituva jännite on 0.7 mV.\n"
           ]
         }
       ],
-      "execution_count": 369,
+      "execution_count": 370,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1925,9 +1925,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-11T17:08:32.188Z",
-          "iopub.execute_input": "2021-11-11T17:08:32.217Z",
-          "iopub.status.idle": "2021-11-11T17:08:32.280Z"
+          "iopub.status.busy": "2021-11-11T17:09:34.082Z",
+          "iopub.execute_input": "2021-11-11T17:09:34.115Z",
+          "iopub.status.idle": "2021-11-11T17:09:34.176Z"
         }
       }
     },
