--- a/7/1.ipynb
+++ b/7/1.ipynb
@@ -18,7 +18,11 @@
       "source": [
         "using Printf\n",
         "using Dates\n",
-        "c=2.99792e8\n",
+        "b=2.897768e-3 # Wienin siirtymälain vakio\n",
+        "c=2.99792e8 # Valon nopeus\n",
+        "h=6.6260693e-34 # Plancin vakio\n",
+        "eV=1.62021766e-19 # Elektorinivoltti\n",
+        "sigma=5.670374419e-8 # Stefan-Boltzman\n",
         "@printf \"%s\\n\" Dates.now();\n",
         "versioninfo(verbose=false);"
       ],
@@ -27,7 +31,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-11-13T21:58:19.017\n",
+            "2021-11-14T20:07:09.923\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -43,7 +47,7 @@
           ]
         }
       ],
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -56,9 +60,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-13T19:58:17.945Z",
-          "iopub.execute_input": "2021-11-13T19:58:18.918Z",
-          "iopub.status.idle": "2021-11-13T19:58:21.012Z"
+          "iopub.status.busy": "2021-11-14T18:07:09.966Z",
+          "iopub.execute_input": "2021-11-14T18:07:09.979Z",
+          "iopub.status.idle": "2021-11-14T18:07:10.013Z"
         }
       }
     },
@@ -79,17 +83,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "f=1.2e18\n",
+        "E=h*f\n",
+        "@printf(\"Fotonin energia on %.1e J.\\n\",E)\n",
+        "lambda=150\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonin energia on %.1e J.\\n\",E)\n",
+        "E=1.8e3eV\n",
+        "lambda=h*c/E\n",
+        "@printf(\"Aallonpituus on %.2e m.\\n\",lambda)\n"
+      ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Värähtelytaajuus on 3.6e+04 Hz.\n"
+            "Fotonin energia on 8.0e-16 J.\n",
+            "Fotonin energia on 1.3e-27 J.\n",
+            "Aallonpituus on 6.81e-10 m.\n"
           ]
         }
       ],
-      "execution_count": 127,
+      "execution_count": 10,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -102,9 +118,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-10-25T17:50:04.705Z",
-          "iopub.execute_input": "2021-10-25T17:50:04.718Z",
-          "iopub.status.idle": "2021-10-25T17:50:04.750Z"
+          "iopub.status.busy": "2021-11-14T17:23:49.491Z",
+          "iopub.execute_input": "2021-11-14T17:23:49.500Z",
+          "iopub.status.idle": "2021-11-14T17:23:49.519Z"
         }
       }
     },
@@ -124,6 +140,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "E=h*c/lambda\n",
+        "@printf(\"Näkyvän valon fotonien energia on %.1e - %.1e J.\\n\",\n",
+        "    h*c/700e-9,h*c/400e-9)\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Näkyvän valon fotonien energia on 2.8e-19 - 5.0e-19 J.\n"
+          ]
+        }
+      ],
+      "execution_count": 12,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:26:36.709Z",
+          "iopub.execute_input": "2021-11-14T17:26:36.718Z",
+          "iopub.status.idle": "2021-11-14T17:26:36.738Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1-5\n",
@@ -135,6 +186,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=480e-9\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonin energia on %.1f eV.\\n\",E/eV)\n",
+        "p=h/lambda\n",
+        "@printf(\"Fotonin liikemäärä on %.1e kgm/s.\\n\",p)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonin energia on 2.6 eV.\n",
+            "Fotonin liikemäärä on 1.4e-27 kgm/s.\n"
+          ]
+        }
+      ],
+      "execution_count": 15,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:29:54.653Z",
+          "iopub.execute_input": "2021-11-14T17:29:54.668Z",
+          "iopub.status.idle": "2021-11-14T17:29:54.806Z"
         }
       }
     },
@@ -154,6 +243,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "lambda=570e-9\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonien määrä on %d.\\n\",Int(floor(1e-17/E))+1)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonien määrä on 29.\n"
+          ]
+        }
+      ],
+      "execution_count": 20,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:35:58.046Z",
+          "iopub.execute_input": "2021-11-14T17:35:58.062Z",
+          "iopub.status.idle": "2021-11-14T17:35:58.091Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1-7\n",
@@ -165,6 +289,41 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=500e-9\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonien määrä on %.0e.\\n\",1.4e3/E)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonien määrä on 4e+21.\n"
+          ]
+        }
+      ],
+      "execution_count": 21,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:38:13.204Z",
+          "iopub.execute_input": "2021-11-14T17:38:13.215Z",
+          "iopub.status.idle": "2021-11-14T17:38:13.243Z"
         }
       }
     },
@@ -184,6 +343,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "f=1800e6\n",
+        "E=h*f\n",
+        "@printf(\"Fotonien energia on %.1e eV.\\n\",E/eV)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonien energia on 7.4e-06 eV.\n"
+          ]
+        }
+      ],
+      "execution_count": 23,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:40:21.286Z",
+          "iopub.execute_input": "2021-11-14T17:40:21.300Z",
+          "iopub.status.idle": "2021-11-14T17:40:21.434Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1-9\n",
@@ -195,6 +389,41 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=532e-9\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonien määrä on %.0e.\\n\",200e-3/E)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonien määrä on 5e+17.\n"
+          ]
+        }
+      ],
+      "execution_count": 24,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T17:42:27.395Z",
+          "iopub.execute_input": "2021-11-14T17:42:27.410Z",
+          "iopub.status.idle": "2021-11-14T17:42:27.439Z"
         }
       }
     },
@@ -214,6 +443,42 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "T=8100\n",
+        "lambda=b/T\n",
+        "E=h*c/lambda\n",
+        "@printf(\"Fotonin energia on %.1f eV.\\n\",E/eV)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fotonin energia on 3.4 eV.\n"
+          ]
+        }
+      ],
+      "execution_count": 28,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T18:04:25.862Z",
+          "iopub.execute_input": "2021-11-14T18:04:25.885Z",
+          "iopub.status.idle": "2021-11-14T18:04:25.917Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1-11\n",
@@ -229,6 +494,44 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "T=5800\n",
+        "lambda=b/T\n",
+        "@printf(\"Aallonpituus on %.1e m.\\n\",lambda)\n",
+        "I=sigma*T^4\n",
+        "@printf(\"Säteilyteho on %.1e W/m2.\\n\",I)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 5.0e-07 m.\n",
+            "Säteilyteho on 6.4e+07 W/m2.\n"
+          ]
+        }
+      ],
+      "execution_count": 32,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T18:07:16.818Z",
+          "iopub.execute_input": "2021-11-14T18:07:16.831Z",
+          "iopub.status.idle": "2021-11-14T18:07:16.859Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1-12\n",
@@ -240,6 +543,41 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T=273+37\n",
+        "lambda=b/T\n",
+        "@printf(\"Aallonpituus on %.1e m.\\n\",lambda)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 9.3e-06 m.\n"
+          ]
+        }
+      ],
+      "execution_count": 35,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-14T18:09:07.036Z",
+          "iopub.execute_input": "2021-11-14T18:09:07.057Z",
+          "iopub.status.idle": "2021-11-14T18:09:07.093Z"
         }
       }
     }
