--- a/7/2.ipynb
+++ b/7/2.ipynb
@@ -410,7 +410,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2-13 \n",
+        "2-13 fotonin ja elektronin energiat \n",
+        "$\\lambda'-\\lambda=\\frac{h}{m_ec}(1-cos \\Theta)$\n",
+        "https://en.wikipedia.org/wiki/Compton_scattering\n",
+        "\n",
+        "\n",
         "\n",
         "Kirjan vastaus: 22.8 keV ja 2.23 keV"
       ],
@@ -425,44 +429,27 @@
     {
       "cell_type": "code",
       "source": [
-        "E=25e3*eV\n",
+        "E=25e3*eV # hc/l\n",
         "l0=h*c/E\n",
-        "p=h/l0 # Liikemäärä ennen törmäystä\n",
-        "@printf(\"p=%.2e l0=%.2e.\\n\",p,l0)\n",
-        "# Liikemäärä törmäyksen jälkeen h/l1+me*ve\n",
-        "# p=h/l1+me*ve\n",
-        "# ve=(p-h/l1)/me\n",
-        "# l1*p=h+l1*me*ve\n",
-        "# (p-me*ve)*l1=h\n",
-        "# l1=h/(p-me*ve)\n",
-        "# Energia säilyy ef+ee=E\n",
-        "# ef=h*c/l1\n",
-        "# ee=0.5*me*ve^2\n",
-        "# h*c/(h/(p-me*ve))+0.5*me*ve^2=E\n",
-        "# c*(p-me*ve)+0.5*me*ve^2=E\n",
-        "# (0.5*me)*ve^2-c*me*ve+c*p-E=0\n",
-        "ka=0.5*me\n",
-        "kb=-c*me\n",
-        "kc=c*p-E\n",
-        "ve=(-kb+sqrt(kb^2-4*ka*kc))/2*ka\n",
-        "@printf(\"p=%.2e ve=%.2e m/s.\\n\",p,ve)\n",
-        "ee=0.5*me*ve^2/eV\n",
-        "l1=h/(p-me*ve)\n",
+        "@printf(\"l0=%.2e m\\n\",l0)\n",
+        "theta=pi # palaa tulosuuntaan\n",
+        "l1=l0+h/(me*c)*(1-cos(theta))\n",
+        "@printf(\"l1=%.2e m\\n\",l1)\n",
         "ef=h*c/l1\n",
-        "@printf(\"Fotonin energia on %.2e eV ja elektronin %.2e eV.\\n\",ef,ee)"
+        "@printf(\"ef=%.2e eV, ee=%.2e\\n\",ef/eV,(E-ef)/eV)\n"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "p=1.34e-23 l0=4.96e-11.\n",
-            "p=1.34e-23 ve=1.24e-52 m/s.\n",
-            "Fotonin energia on 4.01e-15 eV ja elektronin 4.40e-116 eV.\n"
+            "l0=4.96e-11 m\n",
+            "l1=5.44e-11 m\n",
+            "ef=2.28e+04 eV, ee=2.23e+03\n"
           ]
         }
       ],
-      "execution_count": 41,
+      "execution_count": 69,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -475,9 +462,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-20T18:31:07.995Z",
-          "iopub.execute_input": "2021-11-20T18:31:08.007Z",
-          "iopub.status.idle": "2021-11-20T18:31:08.033Z"
+          "iopub.status.busy": "2021-11-21T20:11:49.591Z",
+          "iopub.execute_input": "2021-11-21T20:11:49.604Z",
+          "iopub.status.idle": "2021-11-21T20:11:49.631Z"
         }
       }
     },
