--- a/7/2.ipynb
+++ b/7/2.ipynb
@@ -410,8 +410,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2-13 fotonin ja elektronin energiat \n",
-        "$\\lambda'-\\lambda=\\frac{h}{m_ec}(1-cos \\Theta)$\n",
+        "2-13 fotonin ja elektronin energiat, kirjassa ei ole esitetty tämän ratkaisemiseksi tarpeellista Comptonin yhtälöä matemaattisessa muodossa, vaikka kuvassa on esitetty siihen liittyvät termit. <br>\n",
+        "$\\lambda'-\\lambda=\\frac{h}{m_ec}(1-cos \\Theta)$<br>\n",
         "https://en.wikipedia.org/wiki/Compton_scattering\n",
         "\n",
         "\n",
@@ -465,24 +465,6 @@
           "iopub.status.busy": "2021-11-21T20:11:49.591Z",
           "iopub.execute_input": "2021-11-21T20:11:49.604Z",
           "iopub.status.idle": "2021-11-21T20:11:49.631Z"
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
         }
       }
     }
